Add procedural mesh component

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,11 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3EB933668143D96FDC2BCEADCE83D28F
+Description=A Zarch like game.
+ProjectName=World Domination
+ProjectVersion=0.1.0.0
+CompanyName=till-art.net
+CompanyDistinguishedName=Oliver Knoll
+CopyrightNotice=MIT License - Copyright (c) 2020 Oliver Knoll
+LicensingTerms=MIT License 
+
